syntax = "proto3";

package todo.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/qclaogui/golang-api-server/api/gen/proto/todo/v1";

// Tasks wo have to do
message ToDo {
  // Unique integer identifier of the todo task
  string id = 1;

  string title = 2;

  string description = 3;

  google.protobuf.Timestamp reminder = 4;
}

message CreateRequest {
  // API version
  string api = 1;
  ToDo to_do = 2;
}

message CreateResponse {
  // API version
  string api = 1;

  string id = 2;
}

message ReadRequest {
  // API version
  string api = 1;
  string id = 2;
}

message ReadResponse {
  // API version
  string api = 1;
  ToDo to_do = 2;
}

message UpdateRequest {
  // API version
  string api = 1;
  ToDo to_do = 2;
}

message UpdateResponse {
  // API version
  string api = 1;

  // Contains number of entities have been updated
  //  Equals 1 in case of successful update
  int64 updated = 2;
}

message DeleteRequest {
  // API version
  string api = 1;

  string id = 2;
}

message DeleteResponse {
  // API version
  string api = 1;

  int64 deleted = 2;
}

message ReadAllRequest {
  // API version
  string api = 1;
}

message ReadAllResponse {
  // API version
  string api = 1;

  // List of all
  repeated ToDo to_dos = 2;
}

service ToDoService {
  rpc Create(CreateRequest) returns (CreateResponse);

  rpc Read(ReadRequest) returns (ReadResponse);

  rpc Update(UpdateRequest) returns (UpdateResponse);

  rpc Delete(DeleteRequest) returns (DeleteResponse);

  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}
